<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip" >

        <EditText
            android:id="@+id/txt_customer_id"
            style="@style/westpack_general_edit_text"
            android:layout_width="230.0dip"
            android:layout_height="@dimen/westpack_text_field_height"
            android:layout_centerHorizontal="true"
            android:background="@drawable/textfield_enabled"
            android:hint="@string/customer_id_hint"
            android:inputType="number"
            android:maxLength="8" />

        <EditText
            android:id="@+id/txt_password"
            style="@style/westpack_general_edit_text"
            android:layout_width="230.0dip"
            android:layout_height="@dimen/westpack_text_field_height"
            android:layout_below="@id/txt_customer_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4.0dip"
            android:background="@drawable/textfield_enabled"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLength="6" />

        <Button
            android:id="@+id/btn_continue"
            style="@style/westpack_redbg_red_button"
            android:layout_width="230.0dip"
            android:layout_height="@dimen/westpack_button_height"
            android:layout_below="@+id/txt_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15.0dip"
            android:layout_marginBottom="15.0dip"
            android:text="@string/btn_verify_me" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12.0dip"
            android:background="@android:color/transparent"
            android:layout_marginTop="5dip"
            android:layout_below="@+id/btn_continue"
            android:text="@string/no_connection"
            android:textColor="@color/credit_card_invalid_text_color"
            android:textSize="15sp"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>